--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: /root/.m2/repository
-          key: ${{ env.cache-name }}-maven-${{ hashFiles('project.clj') }}-${{ hashFiles('deps.edn') }}
+          key: ${{ env.cache-name }}-maven-${{ hashFiles('project.clj') }}
           restore-keys: |
             ${{ runner.os }}-maven-
 
