--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,40 +3,34 @@ name: CI
 on: [push]
 
 jobs:
-  test:
-    name: Test
+  build:
+    name: Build
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java: [ '8', '11', '14' ]
     steps:
       - uses: actions/checkout@v2
-      - name: Maven cache
-        uses: actions/cache@v2
+      - name: Setup Java
+        uses: actions/setup-java@v1
         with:
-          path: /root/.m2/repository
-          key: ${{ env.cache-name }}-maven-${{ hashFiles('project.clj') }}
-          restore-keys: |
-            ${{ env.cache-name }}-maven-
+          java-version: ${{ matrix.java }}
+      - name: Setup Clojure
+        uses: DeLaGuardo/setup-clojure@master
+        with:
+          tools-deps: '1.10.1.754'
       - name: Run tests (core)
         run: clj -M:test:runner
       - name: Run tests (clojurescript)
         run: clj -M:test:cljs-runner
-
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install clj-kondo
+      - name: Run clj-kondo
         run: |
           curl -sLO https://raw.githubusercontent.com/borkdude/clj-kondo/master/script/install-clj-kondo
           chmod +x install-clj-kondo
           sudo ./install-clj-kondo
-      - name: Lint the source directory
+      - name: Lint src
         run: clj-kondo --lint src/
-      - name: Lint the test directory
+      - name: Lint test
         run: clj-kondo --lint test/
-
-  check-formatting:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
       - name: Run cljfmt check
-        run: clj -Sdeps '{:deps {cljfmt {:mvn/version "0.7.0"}}}' -m cljfmt.main [check|fix]
+        run: clj -Sdeps '{:deps {cljfmt {:mvn/version "0.7.0"}}}' -m cljfmt.main check
