Reformat ci.yml

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,14 +27,14 @@ jobs:
         run: clojure -M:test:cljs-runner
 
   lint:
-      run: |
-        curl -sLO https://raw.githubusercontent.com/borkdude/clj-kondo/master/script/install-clj-kondo
-        chmod +x install-clj-kondo
-        sudo ./install-clj-kondo
-    - steps:
-        - name: Lint src
-          run: clj-kondo --lint src/
-        - name: Lint test
-          run: clj-kondo --lint test/
-        - name: Run cljfmt check
-          run: clojure -Sdeps '{:deps {cljfmt {:mvn/version "0.7.0"}}}' -m cljfmt.main check
+    run: |
+      curl -sLO https://raw.githubusercontent.com/borkdude/clj-kondo/master/script/install-clj-kondo
+      chmod +x install-clj-kondo
+      sudo ./install-clj-kondo
+    steps:
+      - name: Lint src
+        run: clj-kondo --lint src/
+      - name: Lint test
+        run: clj-kondo --lint test/
+      - name: Run cljfmt check
+        run: clojure -Sdeps '{:deps {cljfmt {:mvn/version "0.7.0"}}}' -m cljfmt.main check
