Test the examples in the readme (#49)
- Fix the examples in the readme to adhere to the format necessary for https://github.com/seancorfield/readme

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,6 +23,8 @@ jobs:
         run: clojure -M:test:runner
       - name: Run tests (clojurescript)
         run: clojure -M:test:cljs-runner
+      - name: Run tests (readme codeblocks)
+        run: clojure -M:readme
       - name: Install clj-kondo
         run: |
           curl -sLO https://raw.githubusercontent.com/borkdude/clj-kondo/master/script/install-clj-kondo
